Corrected all known bugs JCWSD-51 In the New Book List form the button to open/close the form is not formatted correctly. The bottom of the button is cut off
JCWSD-52 I would like the Select boxes to have the default text displayed in them'

JCWSD-54 Implement a check to make sure that start date is before end date

JCWSD-55 The two select buttons in the form dont' display the selection value after they are selected.

JCWSD-60 When the Fiction Box is ticked in the New Book Review form, it can't be un-tickes

As well as all of these feature being implemented (Note: These features are not all new to this checkin but they are no feature complete and I am putting them into Done)

JCWSD-59 Have Form Data appended to the current Book Review list

JCWSD-53 Store all the elements of the form using State variables in REACT.

JCWSD-46 Setup a page to display book list

JCWSD-49 Setup Page to enter new book review

--- a/src/bookformstyles.css
+++ b/src/bookformstyles.css
@@ -170,6 +170,7 @@ li {
 
 .book-count {
   font-size: 30px;
+  height: 50px;
   background-color: #94a3b8;
   margin: 5px;
   padding: 5px 5px;
@@ -177,10 +178,11 @@ li {
 }
 button.add {
   font-size: 30px;
+  height: 50px;
   border: 5px solid #475569;
   background-color: #94a3b8;
-  margin: 5px;
-  padding: 5px 5px;
+  margin: 15px;
+  padding: 5px;
   text-align: center;
 }
 ul {
